name:                   yesod-amazonka
version:                0.1.0.0
synopsis:               Helpful functions to adapt Amazonka to Yesod
homepage:               https://github.com/whittle/yesod-amazonka#readme
license:                BSD3
license-file:           LICENSE
author:                 Jason Whittle
maintainer:             jason.whittle@gmail.com
copyright:              Copyright (c) 2016 Jason A. Whittle
category:               Web, Yesod
build-type:             Simple
cabal-version:          >=1.10
description:            Please see README.md

extra-source-files:     LICENSE
                      , README
                      , stack.yaml

library
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , amazonka >= 1.4
                     , blaze-builder >= 0.4
                     , fast-logger >= 2.4
                     , yesod-core >= 1.4
  hs-source-dirs:      src
  exposed-modules:     Yesod.AWS

source-repository head
  type:     git
  location: https://github.com/whittle/yesod-amazonka
